--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="b6"></div>  
 <div id="b7"></div>
 </div>
-<h1>Ура</h1>
-<h2></h2>
+<h1>МІЙ ПЕРВОЙ САЙТ😆😆😆😋🗽🌟</h1>
+<h2>💎👽🎂МІЙ ПЕРВОЙ САЙТ😆😆😆😋🗽🌟</h2>
 </body>
 </html>
